--- a/HomeworkExercise_MovieDomesticGross.ipynb
+++ b/HomeworkExercise_MovieDomesticGross.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Movie% Domestic Gross\n",
+    "\n",
+    "The movie reviews website was very happy with your deliverable for the previous assignment and now they have a new request for you.\n",
+    "The previous consultant had created a chart for them which is illustrated on the next slide. However the Python code used to create the diagram has since been lost and cannot be recovered. Your task is to come up with the code that will re-create the same chart making it look as close as possible to the original\n",
+    "A new dataset has been supplied."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,13 +24,6 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
