--- a/HomeworkExercise_MovieDomesticGross.ipynb
+++ b/HomeworkExercise_MovieDomesticGross.ipynb
@@ -823,7 +823,7 @@
     "plt.yticks(fontsize=15) \n",
     "plt.xticks(fontsize=15)\n",
     "\n",
-    "#Placing the legen\n",
+    "#Placing the legend\n",
     "plt.legend(bbox_to_anchor=(1.05, 1.0), loc=2, frameon=False, prop={'size':12}, borderaxespad=0)\n",
     "plt.show()"
    ]
